[gd_scene load_steps=21 format=3 uid="uid://biphrcasoy2rw"]

[ext_resource type="Texture2D" uid="uid://n4rws2wuu3gc" path="res://assets/player/swordslice-Sheet.png" id="1_ulwsk"]
[ext_resource type="Script" path="res://scripts/playablechars/swordsman/swordsmanbasic.gd" id="2_o8qq8"]
[ext_resource type="PackedScene" uid="uid://cytriikyqsa7y" path="res://scenes/utilcomponents/hit_box.tscn" id="3_h63vj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1x41i"]
atlas = ExtResource("1_ulwsk")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yt5fm"]
atlas = ExtResource("1_ulwsk")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_il1t5"]
atlas = ExtResource("1_ulwsk")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6sfmy"]
atlas = ExtResource("1_ulwsk")
region = Rect2(384, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7syrs"]
atlas = ExtResource("1_ulwsk")
region = Rect2(512, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfms8"]
atlas = ExtResource("1_ulwsk")
region = Rect2(640, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yj770"]
atlas = ExtResource("1_ulwsk")
region = Rect2(768, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp6bn"]
atlas = ExtResource("1_ulwsk")
region = Rect2(896, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0aho1"]
atlas = ExtResource("1_ulwsk")
region = Rect2(1024, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukl2x"]
atlas = ExtResource("1_ulwsk")
region = Rect2(1152, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4obn"]
atlas = ExtResource("1_ulwsk")
region = Rect2(1280, 0, 128, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_xa2os"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1x41i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yt5fm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_il1t5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sfmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7syrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfms8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yj770")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp6bn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0aho1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukl2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4obn")
}],
"loop": true,
"name": &"default",
"speed": 13.0
}]

[sub_resource type="Animation" id="Animation_tmykt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox1/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox2/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_gr1id"]
resource_name = "basic"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox1/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox2/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.6, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o38mg"]
_data = {
"RESET": SubResource("Animation_tmykt"),
"basic": SubResource("Animation_gr1id")
}

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_yhmyu"]
points = PackedVector2Array(25, 3, 0, -23, -25, -27, -40, -15, -37, 12, 5, 0)

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_pvj14"]
points = PackedVector2Array(-33, 7, 15, -28, 40, -23, 45, 11, 10, 1)

[node name="SwordsmanBasic" type="AnimatedSprite2D"]
visible = false
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_xa2os")
frame = 2
offset = Vector2(0, -20)
script = ExtResource("2_o8qq8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o38mg")
}

[node name="HitBox1" parent="." instance=ExtResource("3_h63vj")]
collision_layer = 4

[node name="CollisionShape2D" parent="HitBox1" index="0"]
shape = SubResource("ConvexPolygonShape2D_yhmyu")
disabled = true

[node name="HitBox2" parent="." instance=ExtResource("3_h63vj")]
collision_layer = 4

[node name="CollisionShape2D" parent="HitBox2" index="0"]
shape = SubResource("ConvexPolygonShape2D_pvj14")
disabled = true

[node name="Cooldown" type="Timer" parent="."]
wait_time = 1.2

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]

[editable path="HitBox1"]
[editable path="HitBox2"]
